rename command app-test
having the files named .app-test.js but using `meteor npm run test-app`
to run them was confusing.

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,4 @@ script:
   # Run unit-tests
   - meteor npm run test
   # Run end-to-end tests
-  - meteor npm run test-app
+  - meteor npm run app-test
