move settings to subdir
unclutter the project root

--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "selenium-webdriver": "3.0.0-beta-2"
   },
   "scripts": {
-    "dev": "meteor --settings settings.dev.json",
-    "test": "TEST_BROWSER_DRIVER=phantomjs meteor test --settings settings.ci.json --once --driver-package meteortesting:mocha",
-    "app-test": "TEST_BROWSER_DRIVER=phantomjs meteor test --settings settings.ci.json --full-app --once --driver-package meteortesting:mocha",
-    "test-live": "TEST_WATCH=1 meteor test --settings settings.ci.json --full-app --driver-package meteortesting:mocha",
+    "dev": "meteor --settings settings/dev.json",
+    "test": "TEST_BROWSER_DRIVER=phantomjs meteor test --settings settings/ci.json --once --driver-package meteortesting:mocha",
+    "app-test": "TEST_BROWSER_DRIVER=phantomjs meteor test --settings settings/ci.json --full-app --once --driver-package meteortesting:mocha",
+    "test-live": "TEST_WATCH=1 meteor test --settings settings/ci.json --full-app --driver-package meteortesting:mocha",
     "js-lint": "jshint"
   },
   "repository": {
