add xvfb for tests on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,19 @@ cache:
     - ".meteor/local/plugin-cache"
     - "node_modules"
 
+addons:
+  apt:
+    packages:
+      - xvfb
+
 before_install:
   # Download Meteor
   - PATH=$PATH:$HOME/.meteor
   - if [ ! -e $HOME/.meteor/meteor ]; then curl -k https://install.meteor.com | sh; fi
 
 install:
+  - export DISPLAY=':99.0'
+  - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
   - meteor npm install
 
 script:
