--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.39",
+    "@babel/runtime": "^7.0.0-beta.42",
     "babel-runtime": "^6.26.0",
     "bcrypt": "^0.8.7",
     "bson": "^0.5.6",
@@ -17,7 +17,7 @@
     "isomorphic-unfetch": "^2.0.0",
     "meteor-node-stubs": "^0.2.11",
     "moment-timezone": "^0.5.14",
-    "sanitize-html": "1.14.1",
+    "sanitize-html": "^1.14.1",
     "seedrandom": "^2.4.3",
     "shariff": "^1.26.2",
     "url": "^0.11.0"
