--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "events": "^1.1.1",
     "ical-generator": "^0.2.10",
     "isomorphic-unfetch": "^2.0.0",
+    "jquery": "^3.3.1",
     "meteor-node-stubs": "^0.2.11",
     "moment-timezone": "^0.5.14",
     "sanitize-html": "^1.14.1",
